feat: add v3 receivable dashboard
